# chutes-build

./: .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  PRIVACY.md  README.md  SECURITY.md  THIRD-PARTY-NOTICES  deny.toml  package.json  rust-toolchain.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  actionlint.yaml  dependabot.yml  upstream.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  package-release.yml  upstream-watch.yml
crates/chutes-build-core/: Cargo.toml
crates/chutes-build-core/src/: account.rs  catalog.rs  context7.rs  endpoint_policy.rs  endpoints.rs  lib.rs  media.rs  privacy.rs  product.rs  reasoning.rs  routing.rs  vision.rs  wellness.rs
crates/codegen/xai-codebase-graph/: Cargo.toml
crates/codegen/xai-fsnotify/: Cargo.toml
crates/codegen/xai-grok-agent/: Cargo.toml  README.md
crates/codegen/xai-grok-announcements/: generate.sh
crates/codegen/xai-grok-config/: Cargo.toml
crates/codegen/xai-grok-memory/: Cargo.toml
crates/codegen/xai-grok-models/: Cargo.toml  default_models.json
docs/: ARCHITECTURE.md  README.md  ascii-logo-concepts.html  chutes-build-promo.html  cli-reference.md  media-artifact-plan.md  model-reasoning-compatibility.md  releasing.md  security-review.md  slash-commands.md  token-efficiency-plan.md  upstream-sync.md
npm/: README.md
npm/scripts/: prepare-platform-package.mjs  sha256-packages.mjs  verify-native-binary.mjs  verify-release.mjs
npm/tests/: launcher.test.cjs  platform-override-preload.cjs  release.test.cjs
(+1004 files in other folders)
