[package]
name = "chutes-build-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors = ["Michael Gasperini (Mikesoft)"]
description = "Chutes-native routing, media, Context7, privacy, and wellness primitives"

[dependencies]
base64 = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "time"] }
url = { workspace = true }
urlencoding = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
